# chip8-emulator

./: CMakeLists.txt  README.md  opcodes.md
.github/workflows/: ccpp.yml
include/: chip8.h  cpu.h  display.h  input.h  keyboard.h  memory.h  sound.h
res/: code4.ch8  tic-tac-toe.ch8
src/: chip8.cpp  cpu.cpp  display.cpp  input.cpp  keyboard.cpp  main.cpp  memory.cpp  sound.cpp
test/: tests.cpp
